==> Artisan19/Infantry-gyrate/Infantry_FreeRTOS_2019/BSP/Referee.c <==
#include "Referee.h"
#include <string.h>
#include "stdbool.h"

void Referee_init(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;
	USART_InitTypeDef USART_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;
	DMA_InitTypeDef DMA_InitStructure;
	
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART6, ENABLE);	//使能USART6，GPIOG ,DMA2时钟
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOG,ENABLE);
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2,ENABLE);
	
	GPIO_PinAFConfig(GPIOG,GPIO_PinSource9,GPIO_AF_USART6);
    GPIO_PinAFConfig(GPIOG,GPIO_PinSource14,GPIO_AF_USART6);
	//USART6_TX   GPIOA9
	GPIO_InitStruct.GPIO_Pin = GPIO_Pin_9 | GPIO_PinSource14 ; 
	GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;//复用功能
	GPIO_InitStruct.GPIO_Speed = GPIO_Speed_100MHz;	//速度50MHz
	GPIO_InitStruct.GPIO_OType = GPIO_OType_PP; //推挽复用输出
	GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_UP; //上拉
	GPIO_Init(GPIOG,&GPIO_InitStruct); 
	

	DMA_DeInit(DMA2_Stream1);   //将DMA的通道1寄存器重设为缺省值

	DMA_Cmd(DMA2_Stream1, DISABLE);						
	while (DMA_GetCmdStatus(DMA2_Stream1) != DISABLE);  
	DMA_InitStructure.DMA_Channel = DMA_Channel_5;  //通道选择
	DMA_InitStructure.DMA_PeripheralBaseAddr = (u32)&USART6->DR;//DMA外设地址
	DMA_InitStructure.DMA_Memory0BaseAddr = (uint32_t)Rx_Buf_Referee[0];//DMA 存储器0地址
	DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralToMemory;//存储器到外设模式
	DMA_InitStructure.DMA_BufferSize = AHRS_RC_LEN;//数据传输量 
	DMA_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;//外设非增量模式
	DMA_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;//存储器增量模式
	DMA_InitStructure.DMA_PeripheralDataSize = DMA_PeripheralDataSize_Byte;//外设数据长度:8位
	DMA_InitStructure.DMA_MemoryDataSize = DMA_MemoryDataSize_Byte;//存储器数据长度:8位
	DMA_InitStructure.DMA_Mode = DMA_Mode_Circular;// 使用循环模式 
	DMA_InitStructure.DMA_Priority = DMA_Priority_Medium;//中等优先级
	DMA_InitStructure.DMA_FIFOMode = DMA_FIFOMode_Disable;         
	DMA_InitStructure.DMA_FIFOThreshold = DMA_FIFOThreshold_Full;
	DMA_InitStructure.DMA_MemoryBurst = DMA_MemoryBurst_Single;//存储器突发单次传输
	DMA_InitStructure.DMA_PeripheralBurst = DMA_PeripheralBurst_Single;//外设突发单次传输
	DMA_Init(DMA2_Stream1, &DMA_InitStructure);//初始化DMA Stream
	//开启双缓冲，首先存储DMA_Memory_0
	DMA_DoubleBufferModeConfig(DMA2_Stream1, (uint32_t)Rx_Buf_Referee[1], DMA_Memory_0);
	DMA_DoubleBufferModeCmd(DMA2_Stream1, ENABLE);
	DMA_Cmd(DMA2_Stream1, DISABLE); //Add a disable
	DMA_Cmd(DMA2_Stream1, ENABLE);


   //USART 初始化设置
    USART_DeInit(USART6);
	USART_InitStructure.USART_BaudRate = 115200;//串口波特率
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为8位数据格式
	USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
	USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;	//收发模式
    USART_Init(USART6, &USART_InitStructure); //初始化串口6
	
	USART_ClearFlag(USART6, USART_FLAG_IDLE);	
    USART_ITConfig(USART6,USART_IT_TC,DISABLE);       
    USART_ITConfig(USART6,USART_IT_RXNE,DISABLE);    
	USART_ITConfig(USART6, USART_IT_IDLE, ENABLE);
	USART_DMACmd(USART6,USART_DMAReq_Rx,ENABLE);
	USART_Cmd(USART6, ENABLE); 	
	 
	 NVIC_InitStructure.NVIC_IRQChannel = USART6_IRQn;
     NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority=0; 
     NVIC_InitStructure.NVIC_IRQChannelSubPriority =0;                
     NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;                         
     NVIC_Init(&NVIC_InitStructure);        


}

void USART6_IRQHandler(void)  
{  
    u16 i=0 ;
     i = i;	
	
   if (USART_GetITStatus(USART6, USART_IT_RXNE) != RESET)
    {
        USART_ReceiveData(USART6);
    }
    else if (USART_GetITStatus(USART6, USART_IT_IDLE) != RESET)
    {  
		
		static uint16_t this_time_rx_len = 0;
        USART_ReceiveData(USART6);
		
		
       if(DMA_GetCurrentMemoryTarget(DMA2_Stream1) == 0)
        {
			 //重新设置DMA
            DMA_Cmd(DMA2_Stream1, DISABLE);
            this_time_rx_len = AHRS_RC_LEN - DMA_GetCurrDataCounter(DMA2_Stream1);
			DMA_SetCurrDataCounter(DMA2_Stream1, AHRS_RC_LEN);
            DMA2_Stream1->CR |= DMA_SxCR_CT;//当前目标存储器为存储器1
		    DMA_ClearFlag(DMA2_Stream1, DMA_FLAG_TCIF1 | DMA_FLAG_HTIF1);
            DMA_Cmd(DMA2_Stream1, ENABLE);
			
			if(this_time_rx_len >= 6)
            {
                 //处理裁判系统数据
			   Referee_read_hook(Rx_Buf_Referee[0],this_time_rx_len);	//read data
            }
		}
		else
		{
			//重新设置DMA
            DMA_Cmd(DMA2_Stream1, DISABLE);
            this_time_rx_len = AHRS_RC_LEN - DMA_GetCurrDataCounter(DMA2_Stream1);
			DMA_SetCurrDataCounter(DMA2_Stream1, AHRS_RC_LEN);
            DMA2_Stream1->CR &= ~DMA_SxCR_CT;//当前目标存储器为存储器0
		    DMA_ClearFlag(DMA2_Stream1, DMA_FLAG_TCIF1 | DMA_FLAG_HTIF1);
            DMA_Cmd(DMA2_Stream1, ENABLE);
			
			if(this_time_rx_len >= 6)
            {
                 //处理裁判系统数据
			   Referee_read_hook(Rx_Buf_Referee[1],this_time_rx_len);	//read data
            }		   
		}
		
		if(max_len < this_time_rx_len)
			max_len = this_time_rx_len;
    }  
    __nop(); 
}
